# flymodenavigator-qt3d

./: CMakeLists.txt
src/libs/: flymodenavigatormodule.h
